Name:           hascheme
Version:        0.0
License:        BSD3
Author:         Andreas Pauley <apauley+hascheme@gmail.com>
Maintainer:     Andreas Pauley <apauley+hascheme@gmail.com>
build-depends:  base, parsec, mtl, haskell98
build-type:     Simple

Executable:     hascheme
Main-Is:        schemeparser.hs
